# src/Generated/Endpoint/AddSkuUsageData.php
@@ -1,88 +1,0 @@
-<?php
-
-declare(strict_types=1);
-
-/*
- * This file has been auto generated by Jane,
- *
- * Do no edit it directly.
- */
-
-namespace Datenkraft\Backbone\Client\SkuUsageApi\Generated\Endpoint;
-
-class AddSkuUsageData extends \Jane\OpenApiRuntime\Client\BaseEndpoint implements \Jane\OpenApiRuntime\Client\Endpoint
-{
-    use \Jane\OpenApiRuntime\Client\EndpointTrait;
-
-    /**
-     * Add SKU Usage data.
-     *
-     * @param \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Model\NewSkuUsageData[] $requestBody
-     */
-    public function __construct(array $requestBody)
-    {
-        $this->body = $requestBody;
-    }
-
-    public function getMethod(): string
-    {
-        return 'POST';
-    }
-
-    public function getUri(): string
-    {
-        return '/sku-usage';
-    }
-
-    public function getBody(\Symfony\Component\Serializer\SerializerInterface $serializer, $streamFactory = null): array
-    {
-        if (is_array($this->body) and isset($this->body[0]) and $this->body[0] instanceof \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Model\NewSkuUsageData) {
-            return [['Content-Type' => ['application/json']], $serializer->serialize($this->body, 'json')];
-        }
-
-        return [[], null];
-    }
-
-    public function getExtraHeaders(): array
-    {
-        return ['Accept' => ['application/json']];
-    }
-
-    /**
-     * {@inheritdoc}
-     *
-     * @throws \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataUnauthorizedException
-     * @throws \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataForbiddenException
-     * @throws \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataUnprocessableEntityException
-     * @throws \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataConflictException
-     * @throws \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataBadRequestException
-     *
-     * @return \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Model\SkuUsageData[]|null
-     */
-    protected function transformResponseBody(string $body, int $status, \Symfony\Component\Serializer\SerializerInterface $serializer, ?string $contentType = null)
-    {
-        if (201 === $status && mb_strpos($contentType, 'application/json') !== false) {
-            return $serializer->deserialize($body, 'Datenkraft\\Backbone\\Client\\SkuUsageApi\\Generated\\Model\\SkuUsageData[]', 'json');
-        }
-        if (401 === $status && mb_strpos($contentType, 'application/json') !== false) {
-            throw new \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataUnauthorizedException($serializer->deserialize($body, 'Datenkraft\\Backbone\\Client\\SkuUsageApi\\Generated\\Model\\ErrorModel', 'json'));
-        }
-        if (403 === $status && mb_strpos($contentType, 'application/json') !== false) {
-            throw new \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataForbiddenException($serializer->deserialize($body, 'Datenkraft\\Backbone\\Client\\SkuUsageApi\\Generated\\Model\\ErrorModel', 'json'));
-        }
-        if (422 === $status && mb_strpos($contentType, 'application/json') !== false) {
-            throw new \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataUnprocessableEntityException($serializer->deserialize($body, 'Datenkraft\\Backbone\\Client\\SkuUsageApi\\Generated\\Model\\ErrorModel', 'json'));
-        }
-        if (409 === $status && mb_strpos($contentType, 'application/json') !== false) {
-            throw new \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataConflictException($serializer->deserialize($body, 'Datenkraft\\Backbone\\Client\\SkuUsageApi\\Generated\\Model\\ErrorModel', 'json'));
-        }
-        if (400 === $status && mb_strpos($contentType, 'application/json') !== false) {
-            throw new \Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception\AddSkuUsageDataBadRequestException($serializer->deserialize($body, 'Datenkraft\\Backbone\\Client\\SkuUsageApi\\Generated\\Model\\ErrorModel', 'json'));
-        }
-    }
-
-    public function getAuthenticationScopes(): array
-    {
-        return ['oAuthAuthorization'];
-    }
-}
