# src/Generated/Exception/AddSkuUsageDataBadRequestException.php
@@ -1,27 +1,0 @@
-<?php
-
-declare(strict_types=1);
-
-/*
- * This file has been auto generated by Jane,
- *
- * Do no edit it directly.
- */
-
-namespace Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception;
-
-class AddSkuUsageDataBadRequestException extends \RuntimeException implements ClientException
-{
-    private $errorModel;
-
-    public function __construct(\Datenkraft\Backbone\Client\SkuUsageApi\Generated\Model\ErrorModel $errorModel)
-    {
-        parent::__construct('Bad Request', 400);
-        $this->errorModel = $errorModel;
-    }
-
-    public function getErrorModel()
-    {
-        return $this->errorModel;
-    }
-}
