# src/Generated/Exception/AddSkuUsageUnprocessableEntityException.php
@@ -1,0 +1,27 @@
+<?php
+
+declare(strict_types=1);
+
+/*
+ * This file has been auto generated by Jane,
+ *
+ * Do no edit it directly.
+ */
+
+namespace Datenkraft\Backbone\Client\SkuUsageApi\Generated\Exception;
+
+class AddSkuUsageUnprocessableEntityException extends \RuntimeException implements ClientException
+{
+    private $errorResponse;
+
+    public function __construct(\Datenkraft\Backbone\Client\SkuUsageApi\Generated\Model\ErrorResponse $errorResponse)
+    {
+        parent::__construct('Unprocessable Entity', 422);
+        $this->errorResponse = $errorResponse;
+    }
+
+    public function getErrorResponse()
+    {
+        return $this->errorResponse;
+    }
+}
