# src/Generated/Model/SkuUsageBase.php
@@ -10,14 +10,8 @@ declare(strict_types=1);
 
 namespace Datenkraft\Backbone\Client\SkuUsageApi\Generated\Model;
 
-class SkuUsageData
+class SkuUsageBase
 {
-    /**
-     * SKU Usage Id.
-     *
-     * @var int
-     */
-    protected $skuUsageId;
     /**
      * SKU Id.
      *
@@ -55,27 +49,9 @@ class SkuUsageData
      */
     protected $externalId;
     /**
-     * @var Meta
+     * @var SkuUsageMeta
      */
     protected $meta;
-
-    /**
-     * SKU Usage Id.
-     */
-    public function getSkuUsageId(): int
-    {
-        return $this->skuUsageId;
-    }
-
-    /**
-     * SKU Usage Id.
-     */
-    public function setSkuUsageId(int $skuUsageId): self
-    {
-        $this->skuUsageId = $skuUsageId;
-
-        return $this;
-    }
 
     /**
      * SKU Id.
@@ -185,12 +161,12 @@ class SkuUsageData
         return $this;
     }
 
-    public function getMeta(): Meta
+    public function getMeta(): SkuUsageMeta
     {
         return $this->meta;
     }
 
-    public function setMeta(Meta $meta): self
+    public function setMeta(SkuUsageMeta $meta): self
     {
         $this->meta = $meta;
 
